--- a/app/views/components/appointments/_status.html.haml
+++ b/app/views/components/appointments/_status.html.haml
@@ -1,2 +1,2 @@
-%span{class: "badge bg-#{appointment.active? ? 'success' : 'secondary'}"}
+%span.badge{ class: "bg-#{appointment.active? ? 'success' : 'secondary'}" }
   = appointment.presenter.status
