--- a/app/views/components/users/_card_avatar.html.haml
+++ b/app/views/components/users/_card_avatar.html.haml
@@ -1,4 +1,4 @@
-- if user&.avatar&.present?
-  = cl_image_tag(user&.avatar&.key, height: '350', crop: "lfill")
+- if user.avatar.present?
+  = cl_image_tag(user.avatar.key, height: '350', crop: "lfill")
 - else
-  = image_tag('avatars/blank_avatar.jpg', size: 'max')
+  = image_tag('avatars/blank_avatar.jpg', size: 'max', class: 'card-img-top')
