--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,32 +1,34 @@
-.container
-  %h2.offset-1 Sign up
-  .row.mt-5
-    .col-4.offset-4
-      .card.border-0
+%h2.offset-1 Sign up
+
+= render 'components/errors', record: resource
+
+.row
+  .col-4.offset-4
+    .card
+      .card-body
         = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-          = render "devise/shared/error_messages", resource: resource
-          .col
-            = f.label :first_name, class: 'form-label'
-            = f.text_field :first_name, class: 'form-control'
-          .col
-            = f.label :last_name, class: 'form-label'
-            = f.text_field :last_name, class: 'form-control'
-          .col
-            = f.label :email, class: 'form-label'
-            = f.email_field :email, class: 'form-control'
-          .col
-            = f.label :phone_number, class: 'form-label'
-            = f.phone_field :phone_number, class: 'form-control'
-          .col
-            = f.label :password, class: 'form-label'
-            - if @minimum_password_length
-              %em
-                (#{@minimum_password_length} characters minimum)
-            = f.password_field :password, class: 'form-control'
-          .col.mb-1
-            = f.label :password_confirmation, class: 'form-label'
-            = f.password_field :password_confirmation, class: 'form-control'
-          .col
-            = f.submit "Sign up", class: 'btn btn-primary'
-          .col
-            = render "devise/shared/links"
+          .row.g-3
+            .col-12
+              = f.label :first_name, class: 'form-label'
+              = f.text_field :first_name, class: 'form-control'
+            .col-12
+              = f.label :last_name, class: 'form-label'
+              = f.text_field :last_name, class: 'form-control'
+            .col-12
+              = f.label :email, class: 'form-label'
+              = f.email_field :email, class: 'form-control'
+            .col-12
+              = f.label :phone_number, class: 'form-label'
+              = f.phone_field :phone_number, class: 'form-control'
+            .col-12
+              = f.label :password, class: 'form-label'
+              - if @minimum_password_length
+                %em
+                  (#{@minimum_password_length} characters minimum)
+              = f.password_field :password, class: 'form-control'
+            .col-12
+              = f.label :password_confirmation, class: 'form-label'
+              = f.password_field :password_confirmation, class: 'form-control'
+            .col-12.d-flex.justify-content-between.align-items-center
+              = f.submit 'Sign up', class: 'btn btn-primary'
+              = render 'devise/shared/links'
